hphp/test/zend/bad/ext/pdo_sqlite/tests/pdo_sqlite_createfunction_002.php
<?php

$db = new PDO( 'sqlite::memory:');

$db->sqliteCreateFunction('bar-alias', 'bar');

?>